--- a/index.css
+++ b/index.css
@@ -11,17 +11,11 @@ body {
   color: #ffffff;
 }
 
-.logo {
-  width: 487px;
-  height: 565px;
-  left: 278px;
-  top: 81px;
-}
-
-.container {
+main {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
   align-items: center;
+  margin: 150px auto;
 }
 
 /* main {
@@ -41,11 +35,16 @@ body {
 
 .input-button-label {
   padding: 8px;
-
+  position: relative;
   border: 1px solid #fcf1f1;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
+}
+
+.button-signin {
+  display: flex;
+  justify-content: flex-end;
 }
 
 /* .title {
