--- a/app.css
+++ b/app.css
@@ -1,4 +1,3 @@
-/* Include the padding and border in an element's total width and height */
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 * {
   box-sizing: border-box;
@@ -16,15 +15,24 @@ body {
   font-family: Montserrat;
 }
 
+.todoTitle {
+  border-radius: 5px;
+  /* border-color: 1.5px solid black; */
+}
+
 .container-top {
   margin-left: 30%;
   margin-right: 30%;
   margin-bottom: 10%;
 }
+
 .container-bottom {
   display: flex;
   flex-direction: row;
-  padding: 10px;
+  padding-left: 23%;
+  padding-right: 23%;
+  -webkit-flex-wrap: wrap;
+  flex: wrap;
 }
 
 /* .border-bottom {
@@ -32,11 +40,12 @@ body {
 } */
 
 .todolist-item {
-  min-width: 200px;
+  min-width: 207px;
   min-height: 100px;
   background: #fff;
   border-radius: 4px;
   margin-right: 20px;
+  margin-bottom: 20px;
   padding: 10px;
 }
 
@@ -89,12 +98,12 @@ ul {
 .remove-todolist {
   display: flex;
   justify-content: flex-end;
-  color: rgb(192, 26, 26);
+  color: rgb(230, 19, 19);
   cursor: pointer;
 }
 
 .remove-todolist:hover {
-  color: rgb(104, 46, 46);
+  color: rgb(70, 66, 66);
 }
 
 /* Add a "checked" mark when clicked on */
@@ -165,7 +174,7 @@ ul {
 input {
   margin: 0;
   border: none;
-  border-radius: 0;
+  border-radius: 10px;
   width: 75%;
   padding: 10px;
   float: left;
