Improve code quality

--- a/app.css
+++ b/app.css
@@ -38,9 +38,8 @@ body {
 }
 
 .container-top {
-  margin-left: 30%;
-  margin-right: 30%;
-  margin-bottom: 10%;
+  width: 400px;
+  margin: 0 auto;
 }
 
 .container-bottom {
